# bola

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build&test.yml  publish_crate.yml
benches/: gemm.rs  getrf.rs  workflow_dep.rs
examples/: getrf.rs  lapack_comp.rs  main.rs
src/: gemm.rs  ger.rs  getrf.rs  getrf2.rs  idamax.rs  laswp.rs  lib.rs  potrf.rs  potrf2.rs  profiling.rs  scal.rs  syrk.rs  trsm.rs  utilities.rs
tests/: integration.rs
