[package]
name = "bola"
version = "0.1.0"
edition = "2024"

[lib]
name = "bola"
path = "src/lib.rs"

[dependencies]
rayon = "1.11.0"


[dev-dependencies]
criterion = "0.7.0"
matrixmultiply = { version = "0.3.10", features = ["threading"] }
rand = "0.9.2"
cblas = "0.5.0"
lapack = "0.20.0"
lapack-sys = "0.15.0"

# [build-dependencies]
# openblas-src = { version = "0.10.12", features = ["cblas", "static"] }

[features]
profiling = []

[[bench]]
name = "getrf"
harness = false

[[bench]]
name = "gemm"
harness = false
