[package]
name = "bola"
version = "0.1.2"
edition = "2024"
description = "A lightweight native rust linear algebra library."
authors = ["Aleksander Lovric <alexlovric@gmail.com>"]
license = "MIT"
repository = "https://github.com/alexlovric/bola"
documentation = "https://docs.rs/bola"
readme = "README.md"
keywords = ["math", "linear-algebra", "lapack", "matrix"]
categories = ["science", "mathematics", "simulation"]

[lib]
name = "bola"
path = "src/lib.rs"

[dependencies]
rayon = "1.11.0"


[dev-dependencies]
criterion = "0.7.0"
matrixmultiply = { version = "0.3.10", features = ["threading"] }
rand = "0.9.2"
cblas = "0.5.0"
lapack = "0.20.0"
lapack-sys = "0.15.0"

# [build-dependencies]
# openblas-src = { version = "0.10.12", features = ["cblas", "static"] }

[features]
profiling = []

[[bench]]
name = "getrf"
harness = false

[[bench]]
name = "gemm"
harness = false

[[bench]]
name = "workflow_dep"
harness = false
